--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
         </div>
 
         <!-- Tab personal -->
-        <div class="app__container active ">
+        <div class="app__container  ">
             <div class="app__header">
                 <div class="app__header-bgBlur" style="background-image: url('./assets/img/avatar/ava.jpg');"></div>
                 <div class="app__header-overlay"></div>
@@ -2381,67 +2381,13 @@
         </div>
 
         <!-- Tab Explore -->
-        <div class="app__container">
+        <div class="app__container active">
             <div class="app__container-content">
                 <div class="explore__container">
                     <div class="grid ">
                         <div class="row container_section">
                             <div class="col c-12">
-                                <div class="row explore__slide-container">
-                                    <div class="explore__slide-move">
-                                        <div class="slide__move-btn btn--prev">
-                                            <i class="bi bi-chevron-left"></i>
-                                        </div>
-                                        <div class="slide__move-btn btn--next">
-                                            <i class="bi bi-chevron-right"></i>
-                                        </div>
-                                    </div>
-                                    <div class="col col-3 explore__slide-item third ">
-                                        <div class="explore__slide-col-display">
-                                            <div class="explore__slide-img img-pos" style="background: url('./assets/img/Explore/1.jpg') no-repeat center  center / cover;"></div>
-                                        </div>
-                                    </div>
-                                    <div class="col col-3 explore__slide-item second next">
-                                        <div class="explore__slide-col-display">
-                                            <div class="explore__slide-img img-pos" style="background: url('./assets/img/Explore/2.jpg') no-repeat center  center / cover;"></div>
-                                        </div>
-                                    </div>
-                                    <div class="col col-3 explore__slide-item first">
-                                        <div class="explore__slide-col-display">
-                                            <div class="explore__slide-img img-pos" style="background: url('./assets/img/Explore/3.jpg') no-repeat center  center / cover;"></div>
-                                        </div>
-                                    </div>
-                                    <div class="col col-3 explore__slide-item sixth prev">
-                                        <div class="explore__slide-col-display">
-                                            <div class="explore__slide-img img-pos" style="background: url('./assets/img/Explore/4.jpg') no-repeat center  center / cover;"></div>
-                                        </div>
-                                    </div>
-                                    <div class="col col-3 explore__slide-item fourth ">
-                                        <div class="explore__slide-col-display">
-                                            <div class="explore__slide-img img-pos" style="background: url('./assets/img/Explore/5.jpg') no-repeat center  center / cover;"></div>
-                                        </div>
-                                    </div>
-                                    <div class="col col-3 explore__slide-item first ">
-                                        <div class="explore__slide-col-display">
-                                            <div class="explore__slide-img img-pos" style="background: url('./assets/img/Explore/6.jpg') no-repeat center  center / cover;"></div>
-                                        </div>
-                                    </div>
-                                    <div class="col col-3 explore__slide-item fifth">
-                                        <div class="explore__slide-col-display">
-                                            <div class="explore__slide-img img-pos" style="background: url('./assets/img/Explore/7.jpg') no-repeat center  center / cover;"></div>
-                                        </div>
-                                    </div>
-                                    <div class="col col-3 explore__slide-item fifth ">
-                                        <div class="explore__slide-col-display">
-                                            <div class="explore__slide-img img-pos" style="background: url('./assets/img/Explore/8.jpg') no-repeat center  center / cover;"></div>
-                                        </div>
-                                    </div>
-                                    <div class="col col-3 explore__slide-item  sixth">
-                                        <div class="explore__slide-col-display">
-                                            <div class="explore__slide-img" style="background: url('./assets/img/Explore/9.jpg') no-repeat center  center / cover;"></div>
-                                        </div>
-                                    </div>
-
+                                <div class="row explore__slide-container">                                  
                                 </div>
                             </div>
                         </div>
@@ -4888,6 +4834,7 @@
 
 
     <script src="./script/script.js"></script>
+    <script src="./script/tabExplore/listSlideExplore.js"></script>
     
 </body>
 </html>
